Basic Quiz Setup
Quiz setup with question queue - an array contains the questions in the order in which they will be asked.

--- a/index.html
+++ b/index.html
@@ -9,8 +9,11 @@
 </head>
 <body>
     <div class="container">
-        <div class="output">output stuff</div>
-        <input class="input" placeholder="your text here"></input>
+        <div class="output">No words loaded</div>
+        <input class="input"></input>
     </div>
+    <footer>
+        <script src="main.js"></script>
+    </footer>
 </body>
 </html>
