--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
 <body>
     <div class="container">
         <div class="output">No words loaded</div>
+        <div class="streakBox">
+            <div class="streak1"></div>
+            <div class="streak2"></div>
+            <div class="streak3"></div>
+        </div>
         <input class="input"></input>
     </div>
     <footer>
