Improved Input Convenience
Input box is now autofocused and spellcheck has been disabled.

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <div class="streak2"></div>
             <div class="streak3"></div>
         </div>
-        <input class="input"></input>
+        <input class="input" autofocus spellcheck="false"></input>
     </div>
     <footer>
         <script src="main.js"></script>
