Split Weighting and Streak
Questions now have a separate weighting and answer streak value based on whether German or English is being quizzed. Additionally, the mainLoop function now takes arguments which allow for the setting of the language which is being quizzed, including a variable option.

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         <input class="input" autofocus spellcheck="false"></input>
     </div>
     <footer>
+        <script src="quiz.js"></script>
         <script src="main.js"></script>
     </footer>
 </body>
