Added Menu Pane
Added menu pane which allows for the selection of question lists and whether the question lists should be tested by language (German or English) or variably.

--- a/index.html
+++ b/index.html
@@ -9,10 +9,11 @@
 </head>
 <body>
     <div class="menuContainer">
-
+        <div class="buttons"></div>
+        <div class="lists"></div>
     </div>
     <div class="listPreviewContainer">
-        
+
     </div>
     <div class="quizContainer">
         <div class="output">No words loaded</div>
