FileIO Functions Moved
All FileIO functions are now located in fileIO.js. FileIO will only be used in the application via the functions in this file. This allows for the easy porting of the application to a web server, as only the fileIO functions will need changing.

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
         <input class="input" autofocus spellcheck="false"></input>
     </div>
     <footer>
+        <script src="fileIO.js"></script>
         <script src="quiz.js"></script>
         <script src="main.js"></script>
     </footer>
