Functional Menu Panes
The menu panes within the application are now functional in the forwards direction. This means that the user may navigate from the menu to start the vocab quiz, but may not navigate backwards. Menu code has also been refactored.

--- a/index.html
+++ b/index.html
@@ -13,7 +13,20 @@
         <div class="lists"></div>
     </div>
     <div class="listPreviewContainer">
-
+        <div class="sidebar">
+            <div class="sbHeader"></div>
+            <div class="sbModes">
+                
+            </div>
+            <div class="sbLanguage">
+                <div class="selectGerman selected">German</div>
+                <div class="selectEnglish">English</div>
+                <div class="selectVariable">Variable</div>
+            </div>
+            <div class="sbStart">Start</div>
+        </div>
+        <div class="questions"></div>
+        <div class="toolbar"></div>
     </div>
     <div class="quizContainer">
         <div class="output">No words loaded</div>
