Added Back Button
Back button allows for functional backwards navigation from the quiz pane to the list preview pane and from the list preview pane to the menu pane.

--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
         </div>
         <input class="input" autofocus spellcheck="false"></input>
     </div>
+    <div class="back"></div>
     <footer>
         <script src="fileIO.js"></script>
         <script src="quiz.js"></script>
