Question Reanswer Time Editable
The user is now able to edit the reanswer time and the locked status of questions from the question preview pane. This is done via new buttons which are attached to each question on the pane.

--- a/index.html
+++ b/index.html
@@ -25,6 +25,10 @@
             </div>
             <div class="sbStart">Start</div>
         </div>
+        <div class="questionsHeader">
+            <div class="questionText">German</div>
+            <div class="questionText">English</div>
+        </div>
         <div class="questions"></div>
         <div class="toolbar"></div>
     </div>
