Question List Editing
The user now has the ability to add new questions to a list, edit the questions in a list, and remove questions from a list.

--- a/index.html
+++ b/index.html
@@ -29,6 +29,10 @@
             <div class="questionText">German</div>
             <div class="questionText">English</div>
         </div>
+        <div class="addNewQuestion">
+            <div class="setGerman"><input></div>
+            <div class="setEnglish"><input></div>
+        </div>
         <div class="questions"></div>
         <div class="toolbar"></div>
     </div>
