--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 </head>
 <body>
     <div class="menuContainer">
-        <div class="buttons"></div>
+        <div class="buttons">
+            <div class="newList">New List</div>
+        </div>
         <div class="lists"></div>
     </div>
     <div class="listPreviewContainer">
@@ -34,7 +36,11 @@
             <div class="setEnglish"><input></div>
         </div>
         <div class="questions"></div>
-        <div class="toolbar"></div>
+        <div class="toolbar">
+            <div class="deleteList">Delete</div>
+            <div class="duplicateList">Duplicate</div>
+            <div class="renameList">Rename</div>
+        </div>
     </div>
     <div class="quizContainer">
         <div class="output">No words loaded</div>
