Lock All Button
The user is now able to press a button which locks every single question of a list.

--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
             <div class="deleteList">Delete</div>
             <div class="duplicateList">Duplicate</div>
             <div class="renameList">Rename</div>
+            <div class="lockList">Toggle Lock</div>
         </div>
     </div>
     <div class="quizContainer">
