Added Slight Mistake Detection
If the user attempts to answer a question but either makes a typo or uses the wrong article, then the application will inform them of this and offer them a singular second chance at the question.

--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
     </div>
     <div class="back"></div>
     <footer>
+        <script src="levenshtein.js"></script>
         <script src="fileIO.js"></script>
         <script src="quiz.js"></script>
         <script src="main.js"></script>
