Duplicate Question Detection
Added a button to the list preview pane which allows the user to shift all of the questions which share either their German or their English text with another question to the top of the list so that duplicates can be easily detected.

--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
             <div class="duplicateList">Duplicate</div>
             <div class="renameList">Rename</div>
             <div class="lockList">Toggle Lock</div>
+            <div class="findDuplicates">Find Duplicates</div>
         </div>
     </div>
     <div class="quizContainer">
