Added Focus Utilities
Added focus utilities so that the user is able to easily move questions from list to list and lock questions from the quiz pane. Additionally, the long js files have been split into multiple smaller files based on their content.

--- a/index.html
+++ b/index.html
@@ -55,10 +55,13 @@
     </div>
     <div class="back"></div>
     <footer>
+        <script src="helperFunctions.js"></script>
+        <script src="focusutilities.js"></script>
         <script src="levenshtein.js"></script>
         <script src="fileIO.js"></script>
         <script src="quiz.js"></script>
-        <script src="main.js"></script>
+        <script src="listpreview.js"></script>
+        <script src="panes.js"></script>
     </footer>
 </body>
 </html>
